monitoring/grafana-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.runicrealms.com`)
      kind: Rule
      services:
        - name: grafana
          port: 80
  tls:
    certResolver: cloudflare
